--- a/contato.html
+++ b/contato.html
@@ -94,16 +94,20 @@
 
             <footer class="text-center text-lg-start BGLaranja">
               <div class="container d-flex justify-content-center py-5">
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <button type="button" class="btn" id="bgWH">
+                  <img src="./imagens/face_96x96.png" alt="facebook social">
                   <i class="fab fa-facebook-f"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <button type="button" class="btn btn-lg btn-floating mx-2"id="bgWH">
+                  <img src="./imagens/youtube_96.png" alt="youtube social">
                   <i class="fab fa-youtube"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <button type="button" class="btn btn-lg btn-floating mx-2" id="bgWH">
+                  <img src="./imagens/insta_96.png" alt="instagram social">
                   <i class="fab fa-instagram"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+                <button type="button" class="btn btn-lg btn-floating mx-2" id="bgWH">
+                  <img src="./imagens/twitter_96.png" alt="twitter social">
                   <i class="fab fa-twitter"></i>
                 </button>
               </div>
