--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+     <!-- CSS e Icones Bootstrap-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
     <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -68,16 +73,16 @@
             <footer class="text-center text-lg-start BGLaranja">
               <div class="container d-flex justify-content-center py-5">
                 <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-                  <i class="fab fa-facebook-f"></i>
+                  <i class="bi bi-facebook-f"></i>
                 </button>
                 <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-                  <i class="fab fa-youtube"></i>
+                  <i class="bi bi-youtube"></i>
                 </button>
                 <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-                  <i class="fab fa-instagram"></i>
+                  <i class="bi bi-instagram"></i>
                 </button>
                 <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
-                  <i class="fab fa-twitter"></i>
+                  <i class="bi bi-twitter"></i>
                 </button>
               </div>
           
