Sobre Nós - Conteúdo

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -62,12 +62,45 @@
 
   <main>
     <section>
-      <!-- inserir sessão-->
-
+      <div class="container py-5 p-3 ">
+        <br>
+        <h1 class="display-5 fw-bold text-center textoMarinho">Sobre Nós</h1>
+        <br>
+        <p class="textoNeutroCinza text-center text-monospace fs-4">Nós, da Plano A, acreditamos que os planos para um
+          futuro
+          melhor, passam pela democratização do conhecimento.
+          Promovemos a troca de experiências e aprendizado entre educadores da educação básica, atuantes na rede pública
+          brasileira, visando o enriquecimento de seus repertórios dentro de sala de aula.
+          Buscamos colaborar para a diminuição da desigualdade social, por meio de uma educação inclusiva e justa,
+          gerando oportunidades igualitárias e tendo o professor como agente ativo dessa transformação.
+        </p>
+      </div>
     </section>
 
-
-
+    <section>
+      <div class="container py-5 p-3 background-color-white">
+        <div class="row fs-1 textoMarinho">
+          <div class="col-lg-4 text-center">
+            <i class="bi bi-pencil-fill"></i>
+            <h2 class="text-monospace textoMarinho">Missão</h2>
+            <p class="text-monospace textoNeutroCinza fs-4">Promover equiparidade educacional por meio da troca de
+              experiências e disseminação de informação.</p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4 text-center">
+            <i class="bi bi-book-half"></i>
+            <h2 class="text-monospace textoMarinho">Visão</h2>
+            <p class="text-monospace textoNeutroCinza fs-4">Desejamos criar um aplicativo referência em termos de
+              disseminação de informação e promover por meio dela maior inclusão educacional.</p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4 text-center">
+            <i class="bi bi-mortarboard-fill"></i>
+            <h2 class="text-monospace textoMarinho">Valores</h2>
+            <p class="text-monospace textoNeutroCinza fs-4">Inclusão social, respeito, informação, equiparidade,
+              educação colaborativa.</p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -77,16 +110,16 @@
 
       <footer class="text-center text-lg-start BGLaranja">
         <div class="container d-flex justify-content-center py-5">
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-facebook"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-youtube"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-instagram"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;" >
             <i class="bi bi-twitter"></i>
           </button>
         </div>
