Ajuste tamanho fonte Navbar e cor de icones Footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
 
           <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
           <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
@@ -114,16 +114,16 @@
 
       <footer class="text-center text-lg-start BGLaranja">
         <div class="container d-flex justify-content-center py-5">
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-facebook"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-youtube"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-instagram"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #023047;">
             <i class="bi bi-twitter"></i>
           </button>
         </div>
