--- a/sobreNos.html
+++ b/sobreNos.html
@@ -37,7 +37,7 @@
 
         <a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
 
           <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
           <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
