--- a/contato.html
+++ b/contato.html
@@ -101,22 +101,20 @@
   </main>
 
   <footer>
-    <!-- rodape-->
-
     <div class="p-3 BGMarinho text-white container">
 
-      <footer class="text-center text-lg-start BGLaranja">
+      <section class="text-center text-lg-start BGLaranja">
         <div class="container d-flex justify-content-center py-5">
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-facebook"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-youtube"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-instagram"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-twitter"></i>
           </button>
         </div>
@@ -126,13 +124,9 @@
           <p style="color:black;">© 2022 Squad 41</p>
           <a class="text-white" href=" "></a>
         </div>
-        <!-- fim do Copyright -->
-      </footer>
+      </section>
 
     </div>
-    <!-- fim do rodapé-->
-
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
