--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
   <main>
     <section class="container">
-      <!-- inserir sessão-->
       <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="First slide"></li>
           <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
           <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
         </ol>
@@ -74,22 +74,25 @@
             <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
               <h5 id="item-carousel-titulo" class="textoBranco">Eleve suas turmas a outro patamar!</h5>
-              <p id="item-carousel-paragrafo" class="textoBranco">Seja responsável e sinta orgulho máximo de seus púpilos em sala de aula...</p>
-          </div>
+              <p id="item-carousel-paragrafo" class="textoBranco">Seja responsável e sinta orgulho máximo de seus
+                púpilos em sala de aula...</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide">
             <div class="carousel-caption-azulBB d-none d-md-block">
               <h5 id="item-carousel-titulo" class="textoMarinho">Testemunhe um maior rendimento em sala de aula!</h5>
-              <p id="item-carousel-paragrafo" class="textoMarinho">Melhore o engajamento e aprendizado real dos seus alunos!</p>
-          </div>
+              <p id="item-carousel-paragrafo" class="textoMarinho">Melhore o engajamento e aprendizado real dos seus
+                alunos!</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide">
             <div class="carousel-caption-azul d-none d-md-block">
-              <h5 id="item-carousel-titulo" class="textoAmarelo">Testemunhe um maior rendimento em sala de aula!</h5>
-              <p id="item-carousel-paragrafo" class="textoAmarelo">Melhore o engajamento e aprendizado real dos seus alunos!</p>
-          </div>
+              <h5 id="item-carousel-titulo" class="textoAmarelo">Feito por professores e para professores!</h5>
+              <p id="item-carousel-paragrafo" class="textoAmarelo">Colabore, crie, comente e aperfeiçoe a didática junto
+                com a comunidade!</p>
+            </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
@@ -99,31 +102,26 @@
         <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-          </button>
+        </button>
       </div>
     </section>
-
-
-
   </main>
 
   <footer>
-    <!-- rodape-->
-
     <div class="p-3 BGMarinho text-white container">
 
-      <footer class="text-center text-lg-start BGLaranja">
+      <section class="text-center text-lg-start BGLaranja">
         <div class="container d-flex justify-content-center py-5">
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-facebook"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-youtube"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-instagram"></i>
           </button>
-          <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-twitter"></i>
           </button>
         </div>
@@ -133,13 +131,9 @@
           <p style="color:black;">© 2022 Squad 41</p>
           <a class="text-white" href=" "></a>
         </div>
-        <!-- fim do Copyright -->
-      </footer>
+      </section>
 
     </div>
-    <!-- fim do rodapé-->
-
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
