Página planos de aula feita. porém sem fotos.
falta adicionar as fotos. falta inserir os textos dos cards.

--- a/planosDeAula.html
+++ b/planosDeAula.html
@@ -61,8 +61,264 @@
 
 
   <main>
-    <section>
-      <!-- inserir sessão-->
+
+    <!-- inicio do jumbotron Principal-->
+
+    <div class="mt-4 p-5 text-black rounded container BGAzulBB">
+      <h1 class="display-5 fw-bold text-center text-white">Planos de aula</h1>
+    </div>
+
+
+    <!-- inicio do jumbotron Por disciplina-->
+
+    <div class="mt-4 p-5 BGLaranja text-white rounded container">
+      <h2 class="display-5 fw-bold text-center textoMarinho">Por Disciplina</h2>
+    </div>
+
+    <section class="container">
+      <br>
+      <!-- inicio cards de opçoes-->
+
+      <div class="row">
+        <!-- linha 1 dos cards de opçoes-->
+
+        <div class="col">
+          <!-- coluna 1-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Língua Portuguesa</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 2-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Técnicas de Redação</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 3-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Matemática</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 4-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">História</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+
+      </div> <!-- fim da linha 1 dos cards de opçoes-->
+      <br>
+      <div class="row">
+        <!-- linha 2 dos cards de opçoes-->
+
+        <div class="col">
+          <!-- coluna 1-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Geografia</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 2-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Ciências</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 3-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Artes</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- coluna 4-->
+          <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Inglês</h5>
+              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- fim da linha 1 dos cards de opçoes-->
+
+      <!-- inicio do jumbotron Por ano-->
+
+      <div class="mt-4 p-5 BGLaranja text-white rounded container">
+        <h2 class="display-5 fw-bold text-center textoMarinho">Por Ano</h2>
+      </div>
+
+      <section class="container">
+        <br>
+        <!-- inicio cards de opçoes-->
+
+        <div class="row">
+          <!-- linha 1 dos cards de opçoes-->
+
+          <div class="col">
+            <!-- coluna 1-->
+            <div class="card" style="width: 18rem; background-color: #FFB703;">
+              <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">6º Ano</h5>
+                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <!-- coluna 2-->
+            <div class="card" style="width: 18rem; background-color: #FFB703;">
+              <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">7º Ano</h5>
+                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <!-- coluna 3-->
+            <div class="card" style="width: 18rem; background-color: #FFB703;">
+              <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">8º Ano</h5>
+                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <!-- coluna 4-->
+            <div class="card" style="width: 18rem; background-color: #FFB703;">
+              <img src="imagens/planosDeAula/em breve.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">9º Ano</h5>
+                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+              </div>
+            </div>
+          </div>
+
+
+        </div> <!-- fim da linha 1 dos cards de opçoes-->
+      </section>
+      <br>
+
+    </section> <!-- fim dos cards de opçoes-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </section>
 
