--- a/index.html
+++ b/index.html
@@ -61,9 +61,46 @@
 
 
   <main>
-    <section>
+    <section class="container">
       <!-- inserir sessão-->
-
+      <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="Third slide"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 id="item-carousel-titulo" class="textoBranco">Eleve suas turmas a outro patamar!</h5>
+              <p id="item-carousel-paragrafo" class="textoBranco">Seja responsável e sinta orgulho máximo de seus púpilos em sala de aula...</p>
+          </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide">
+            <div class="carousel-caption-azulBB d-none d-md-block">
+              <h5 id="item-carousel-titulo" class="textoMarinho">Testemunhe um maior rendimento em sala de aula!</h5>
+              <p id="item-carousel-paragrafo" class="textoMarinho">Melhore o engajamento e aprendizado real dos seus alunos!</p>
+          </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide">
+            <div class="carousel-caption-azul d-none d-md-block">
+              <h5 id="item-carousel-titulo" class="textoAmarelo">De professores para professores!</h5>
+              <p id="item-carousel-paragrafo" class="textoAmarelo">Colabore, incentive, transforme! </p>
+          </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+          </button>
+      </div>
     </section>
 
 
