--- a/sobreNos.html
+++ b/sobreNos.html
@@ -7,17 +7,17 @@
   <title>Sobre nós - PlanoA</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
+  
   <!--Icones Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
-  <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
+  <!--Css CDN--> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
 
-  <script></script>
 </head>
 
 <body class="text-monospace">
