--- a/planosDeAula.html
+++ b/planosDeAula.html
@@ -6,7 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Planos de Aula - PlanoA</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./imagens/favicon1.ico" type="image/x-icon">
 
   <!--Icones Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
