--- a/perguntasFrequentes.html
+++ b/perguntasFrequentes.html
@@ -6,17 +6,18 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Dúvidas frequentes - PlanoA</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./imagens/favicon1.ico" type="image/x-icon">
 
   <!--Icones Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+  <!--Css CDN--> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
 
-  <script></script>
 </head>
 
 <body class="text-monospace">
@@ -35,7 +36,7 @@
 
         <a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
 
           <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
           <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
