--- a/perguntasFrequentes.html
+++ b/perguntasFrequentes.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  <!--Css CDN--> 
+  <!--Css CDN-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -69,27 +69,27 @@
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
           et rem nulla, excepturi commodi laboriosam sunt porro quia.</p>
-          <br>
+        <br>
         <h2 class="display-10 fw-bold">Como acessar os planos de aula?</h2>
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
           et rem nulla, excepturi commodi laboriosam sunt porro quia.</p>
-          <br>
+        <br>
         <h2 class="display-10 fw-bold">Posso fazer o download do material?</h2>
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
           et rem nulla, excepturi commodi laboriosam sunt porro quia.</p>
-          <br>
+        <br>
         <h2 class="display-10 fw-bold">Posso modificar o material?</h2>
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
           et rem nulla, excepturi commodi laboriosam sunt porro quia.</p>
-          <br>
+        <br>
         <h2 class="display-10 fw-bold">Quais são os requisitos para ser um contribuidor da plataforma Plano A?</h2>
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
           et rem nulla, excepturi commodi laboriosam sunt porro quia.</p>
-          <br>
+        <br>
         <h2 class="display-10 fw-bold">A plataforma possui algum custo?</h2>
         <p class="col-md-8 fs-4 textoNeutroCinza">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
           praesentium natus possimus nobis officia deserunt aliquam deleniti perspiciatis tempora fugit voluptatibus
@@ -108,7 +108,8 @@
 
   </main>
 
-  <footer> <!-- Por algum motivo essa configuração só funciona exatamente nessa página, não nas demais (efeito esse totalmente desejado no caso). Quem puder favor averiguar... [att. Thairony] -->
+  <footer>
+    <!-- Por algum motivo essa configuração só funciona exatamente nessa página, não nas demais (efeito esse totalmente desejado no caso). Quem puder favor averiguar... [att. Thairony] -->
     <div class="p-3 BGMarinho text-white container">
 
       <section class="text-center text-lg-start BGLaranja">
