--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-  <!--Css CDN--> 
+  <!--Css CDN-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
-  
+
 </head>
 
 <body class="text-monospace">
@@ -72,38 +72,40 @@
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
             <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 id="item-carousel-titulo" class="textoBranco">Eleve suas turmas a outro patamar!</h5>
-              <p id="item-carousel-paragrafo" class="textoBranco">Seja responsável e sinta orgulho máximo de seus
-                púpilos em sala de aula...</p>
+            <div class="carousel-caption-amarelo d-none d-md-block">
+              <h5 id="item-carousel-titulo" class="textoBranco"><strong>Eleve suas turmas a outro patamar!</strong></h5>
+              <p id="item-carousel-paragrafo" class="textoBranco"><em>Seja responsável pelo sucesso e sinta orgulho
+                  máximo de seus púpilos em sala de aula...</em></p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide">
             <div class="carousel-caption-azulBB d-none d-md-block">
-              <h5 id="item-carousel-titulo" class="textoMarinho">Testemunhe um maior rendimento em sala de aula!</h5>
-              <p id="item-carousel-paragrafo" class="textoMarinho">Melhore o engajamento e aprendizado real dos seus
-                alunos!</p>
+              <h5 id="item-carousel-titulo" class="textoMarinho"><strong>Testemunhe um maior rendimento em sala de
+                  aula!</strong></h5>
+              <p id="item-carousel-paragrafo" class="textoMarinho"><em>Melhore o engajamento e aprendizado real dos seus
+                  alunos!</em></p>
             </div>
+
           </div>
           <div class="carousel-item">
             <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide">
             <div class="carousel-caption-azul d-none d-md-block">
-              <h5 id="item-carousel-titulo" class="textoAmarelo">Feito por professores e para professores!</h5>
-              <p id="item-carousel-paragrafo" class="textoAmarelo">Colabore, crie, comente e aperfeiçoe a didática junto
-                com a comunidade!</p>
+              <h5 id="item-carousel-titulo" class="textoAmarelo"><strong>De professores para professores!</strong></h5>
+              <p id="item-carousel-paragrafo" class="textoAmarelo"><em>Colabore, crie, comente, aperfeiçoe, incentive e
+                  transforme junto com a comunidade!</em></p>
             </div>
           </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
     </section>
   </main>
 
