--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <footer>
     <div class="p-3 BGMarinho text-white container">
 
-      <section class="text-center text-lg-start BGLaranja">
+      <section class="text-center text-lg-start BGLaranja rounded">
         <div class="container d-flex justify-content-center py-5">
           <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-facebook"></i>
@@ -129,7 +129,7 @@
         </div>
 
         <!-- Copyright -->
-        <div class="text-center text-white p-3 BGAmarelo">
+        <div class="text-center text-white p-3 BGAmarelo rounded">
           <p style="color:black;">© 2022 Squad 41</p>
           <a class="text-white" href=" "></a>
         </div>
