--- a/perguntasFrequentes.html
+++ b/perguntasFrequentes.html
@@ -112,28 +112,28 @@
     <!-- Por algum motivo essa configuração só funciona exatamente nessa página, não nas demais (efeito esse totalmente desejado no caso). Quem puder favor averiguar... [att. Thairony] -->
     <div class="p-3 BGMarinho text-white container">
 
-      <section class="text-center text-lg-start BGLaranja">
-        <div class="container d-flex justify-content-center py-5">
-          <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
-            <i class="bi bi-facebook"></i>
-          </button>
-          <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
-            <i class="bi bi-youtube"></i>
-          </button>
-          <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
-            <i class="bi bi-instagram"></i>
-          </button>
-          <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
-            <i class="bi bi-twitter"></i>
-          </button>
-        </div>
+      <section class="text-center text-lg-start BGLaranja rounded"">
+        <div class=" container d-flex justify-content-center py-5">
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-facebook"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-youtube"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-instagram"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-twitter"></i>
+        </button>
+    </div>
 
-        <!-- Copyright -->
-        <div class="text-center text-white p-3 BGAmarelo">
-          <p style="color:black;">© 2022 Squad 41</p>
-          <a class="text-white" href=" "></a>
-        </div>
-      </section>
+    <!-- Copyright -->
+    <div class="text-center text-white p-3 BGAmarelo rounded">
+      <p style="color:black;">© 2022 Squad 41</p>
+      <a class="text-white" href=" "></a>
+    </div>
+    </section>
 
     </div>
   </footer>
