--- a/planosDeAula.html
+++ b/planosDeAula.html
@@ -21,8 +21,6 @@
 </head>
 
 <body class="text-monospace">
-
-
   <!-- Cabeçalho-->
 
   <header class="p-3 text-white container BGMarinho">
@@ -58,19 +56,13 @@
     </div>
   </header>
 
-
-
   <main>
-
     <!-- inicio do jumbotron Principal-->
-
     <div class="mt-4 p-5 text-black rounded container BGAzulBB">
       <h1 class="display-5 fw-bold text-center text-white">Planos de aula</h1>
     </div>
 
-
     <!-- inicio do jumbotron Por disciplina-->
-
     <div class="mt-4 p-5 BGLaranja text-white rounded container">
       <h2 class="display-5 fw-bold text-center textoMarinho">Por Disciplina</h2>
     </div>
@@ -284,52 +276,17 @@
           </div>
 
 
-        </div> <!-- fim da linha 1 dos cards de opçoes-->
-      </section>
-      <br>
+        </div> <!-- fim da linha 2 dos cards de opçoes-->
+        <br>
 
-    </section> <!-- fim dos cards de opçoes-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </section>
-
-
+      </section> <!-- fim dos cards de opçoes-->
 
   </main>
 
   <footer>
     <div class="p-3 BGMarinho text-white container">
 
-      <section class="text-center text-lg-start BGLaranja">
+      <section class="text-center text-lg-start BGLaranja rounded">
         <div class="container d-flex justify-content-center py-5">
           <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
             <i class="bi bi-facebook"></i>
@@ -346,7 +303,7 @@
         </div>
 
         <!-- Copyright -->
-        <div class="text-center text-white p-3 BGAmarelo">
+        <div class="text-center text-white p-3 BGAmarelo rounded">
           <p style="color:black;">© 2022 Squad 41</p>
           <a class="text-white" href=" "></a>
         </div>
