--- a/planosDeAula.html
+++ b/planosDeAula.html
@@ -56,7 +56,7 @@
     </div>
   </header>
 
-  <main>
+  <main align="center">
     <!-- inicio do jumbotron Principal-->
     <div class="mt-4 p-5 text-black rounded container BGAzulBB">
       <h1 class="display-5 fw-bold text-center text-white">Planos de aula</h1>
@@ -76,7 +76,7 @@
 
         <div class="col">
           <!-- coluna 1-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/lingua-portuguesa.jpg.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Língua Portuguesa</h5>
@@ -91,7 +91,7 @@
 
         <div class="col">
           <!-- coluna 2-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/Imagem_Material_Folha-de-redação.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Técnicas de Redação</h5>
@@ -103,10 +103,11 @@
             </div>
           </div>
         </div>
-
+      
+      <div class="row">      
         <div class="col">
           <!-- coluna 3-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/consejos-matematicas.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Matemática</h5>
@@ -121,7 +122,7 @@
 
         <div class="col">
           <!-- coluna 4-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/HISTÓRIA.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">História</h5>
@@ -133,16 +134,15 @@
             </div>
           </div>
         </div>
-
+      </div>
 
       </div> <!-- fim da linha 1 dos cards de opçoes-->
-      <br>
       <div class="row">
         <!-- linha 2 dos cards de opçoes-->
 
         <div class="col">
           <!-- coluna 1-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/GeografiaII.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Geografia</h5>
@@ -157,7 +157,7 @@
 
         <div class="col">
           <!-- coluna 2-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/Biologia I.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Ciências</h5>
@@ -170,9 +170,10 @@
           </div>
         </div>
 
+      <div class="row">
         <div class="col">
           <!-- coluna 3-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/artes.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Artes</h5>
@@ -187,7 +188,7 @@
 
         <div class="col">
           <!-- coluna 4-->
-          <div class="card" style="width: 18rem; background-color: #FFB703;">
+          <div class="card">
             <img src="./imagens/planosDeAula/English.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Inglês</h5>
@@ -200,6 +201,7 @@
           </div>
         </div>
       </div>
+ 
       <!-- fim da linha 1 dos cards de opçoes-->
 
       <!-- inicio do jumbotron Por ano-->
@@ -217,7 +219,7 @@
 
           <div class="col">
             <!-- coluna 1-->
-            <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <div class="card">
               <img src="./imagens/planosDeAula/6°.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">6º Ano</h5>
@@ -232,7 +234,7 @@
 
           <div class="col">
             <!-- coluna 2-->
-            <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <div class="card">
               <img src="./imagens/planosDeAula/7°.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">7º Ano</h5>
@@ -244,9 +246,10 @@
               </div>
             </div>
           </div>
+        <div class="row">
           <div class="col">
             <!-- coluna 3-->
-            <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <div class="card">
               <img src="./imagens/planosDeAula/8°.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">8º Ano</h5>
@@ -261,7 +264,7 @@
 
           <div class="col">
             <!-- coluna 4-->
-            <div class="card" style="width: 18rem; background-color: #FFB703;">
+            <div class="card">
               <img src="./imagens/planosDeAula/9°.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">9º Ano</h5>
@@ -273,11 +276,10 @@
               </div>
             </div>
           </div>
-
+        </div>
 
         </div> <!-- fim da linha 1 dos cards de opçoes-->
       </section>
-      <br>
 
     </section> <!-- fim dos cards de opçoes-->
 
